proxy/gateway_api/whoami.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: whoami
spec:
  selector:
    app: whoami
  ipFamilyPolicy: RequireDualStack
  ipFamilies:
  - IPv6
  - IPv4
  ports:
    - protocol: TCP
      name: web
      targetPort: 80
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  namespace: default
  name: www-internal
spec:
  gatewayClassName: default
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "www.internal"
      tls:
        mode: Terminate
        certificateRefs:
          - name: www-internal-tls
            namespace: default
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: default
  name: www
spec:
  parentRefs:
    - name: www-internal
      sectionName: https
      kind: Gateway
  rules:
  - backendRefs:
    - name: whoami
      namespace: default
      port: 80
